[package]
name = "rust-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name="precalculate_solutions"
path="src/precalculate_solutions/main.rs"

[dependencies]
wasm-bindgen = "0.2.101"
wasm-bindgen-futures = "0.4.51"
anyhow = "1.0.99"
strum = "0.27"
strum_macros = "0.27"
itertools = "0.14.0"
rstest = "0.26.1"
bencher = "0.1.5"
futures = "0.3.31"
async-std = "1.13.2"
web-time = "1.1.0"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.143"
web-sys = { version = "0.3.78", features = ["Window", "Response"] }
wasm-streams = "0.4.2"
async-once-cell = "0.5.4"

[[bench]]
name = "solve"
harness = false
